k8s/dep-back.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-dep
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
       app: backend
  template:
   metadata:
     name: backend-pods
     namespace: chat-app  
     labels:
       app: backend
   spec:
    containers:
     - name: chatapp-backend
       image: pragya01/chatapp-backend:latest
       ports:
       - containerPort: 5001
