k8s/dep-front.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-dep
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
       app: frontend
  template:
   metadata:
     name: frontend-pods
     namespace: chat-app  
     labels:
       app: frontend
   spec:
    containers:
     - name: chatapp-frontend
       image: pragya01/chatapp-frontend:latest
       ports:
       - containerPort: 80
