k8s/dep-mongo.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb-dep
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
       app: mongodb
  template:
   metadata:
     name: mongodb-pods
     namespace: chat-app  
     labels:
       app: mongodb
   spec:
    containers:
     - name: chatapp-mongodb
       image: mongo:latest
       ports:
       - containerPort: 27017
    volumes:
    - name: mongo-data
      persistentVolumeClaim:
         claimName: mongodb-pvc
