k8s/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: chatapp-ingress
  namespace: chat-app
  labels:
    name: chatapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /    
    nginx.ingress.kubernetes.io/ssl-redirect: "false"    
spec:
 rules:
   - host: chat-tws.com
     http:
       paths:
         - pathType: Prefix
           path: "/"
           backend:
             service:
               name: frontend
               port:
                 number: 80  
         - pathType: Prefix
           path: "/api"
           backend:
             service:
               name: backend
               port:
                 number: 5001
